fix(frontend): correct tsconfig.json for alias and jest types support

--- a/apps/frontend/tsconfig.json
+++ b/apps/frontend/tsconfig.json
@@ -5,13 +5,15 @@
     "lib": ["dom", "dom.iterable", "esnext"],
     "moduleResolution": "bundler",
     "jsx": "preserve",
+    "baseUrl": "src",
+    "types": ["jest", "node"],
     "plugins": [
       {
         "name": "next"
       }
     ],
     "paths": {
-      "@/*": ["./src/*"],
+      "@/*": ["./*"],
       "@beyana/types": ["../../packages/types/src/index"]
     }
   },
