fix(frontend): resolve User type conflict and explicit types in profile page

--- a/.github/workflows/format-check.yml
+++ b/.github/workflows/format-check.yml
@@ -33,6 +33,13 @@ jobs:
       - name: Check ESLint
         run: npm run lint
 
+      - name: Build shared types package
+        run: |
+          cd packages/types
+          npm install
+          npm run build
+          cd ../../
+
       - name: Check TypeScript
         run: |
           # Vérifier la compilation TypeScript
