--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -59,6 +59,7 @@
     "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^8.34.0",
     "@typescript-eslint/parser": "^8.34.0",
+    "eslint": "^9.30.1",
     "eslint-plugin-jest": "^28.13.5",
     "jest": "^30.0.0",
     "mongodb-memory-server": "^10.1.4",
