fix(admin): correct tsconfig baseUrl and alias for TypeScript imports

--- a/apps/admin/tsconfig.json
+++ b/apps/admin/tsconfig.json
@@ -10,8 +10,9 @@
         "name": "next"
       }
     ],
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"],
+      "@/*": ["src/*"],
       "@beyana/types": ["../../packages/types/src/index"]
     }
   },
