--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -20,8 +20,9 @@
     "framer-motion": "^12.17.0",
     "lucide-react": "^0.514.0",
     "next": "15.3.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "picocolors": "^1.1.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.57.0",
     "react-hot-toast": "^2.5.2",
     "react-toastify": "^9.1.3",
@@ -37,13 +38,13 @@
     "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^30.0.0",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^30.0.2",
-    "react-test-renderer": "^19.1.0",
+    "react-test-renderer": "^18.2.0",
     "tailwindcss": "^4",
     "ts-jest": "^29.1.1",
     "typescript": "^5"
