--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
   },
   "packageManager": "npm@10.5.0",
   "devDependencies": {
-    "turbo": "^2.5.4",
-    "prettier": "^3.0.0"
+    "prettier": "^3.0.0",
+    "turbo": "^2.5.4"
   },
   "engines": {
     "node": ">=18.0.0",
     "npm": ">=8.0.0"
+  },
+  "dependencies": {
+    "picocolors": "^1.1.1"
   }
 }
