--- a/apps/backend/.gitignore
+++ b/apps/backend/.gitignore
@@ -19,3 +19,10 @@ pnpm-debug.log*
 # OS generated files
 .DS_Store
 Thumbs.db
+
+# Ignorer tous les fichiers .md sauf README.md, RAPPORT.md, ROADMAP.md et REST.BACK.md
+*.md
+!README.md
+!RAPPORT.md
+!ROADMAP.md
+!REST.BACK.md
