docs: mettre à jour la documentation avec les résultats des tests corrigés
- RAPPORT.md : Mise à jour des métriques de tests (267/268 tests passés)
- ROADMAP.md : Mise à jour du statut des applications (99.6% backend, 100% frontend/admin)
- README.md : Ajout de la section Tests et nouvelles commandes de test
- package.json : Ajout des commandes test:frontend, test:admin, test:backend
- TESTS_CORRECTIONS.md : Nouveau fichier détaillant toutes les corrections effectuées

Résultats finaux :
- Backend : 232/233 tests passés (99.6% de succès, couverture 66.68%)
- Frontend : 34/34 tests passés (100% de succès)
- Admin : 1/1 test passé (100% de succès)
- Total : 267/268 tests passés (99.6% de succès global)

--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "build": "turbo run build",
     "lint": "turbo run lint",
     "test": "turbo run test",
+    "test:frontend": "cd apps/frontend && npm test -- --coverage --watchAll=false",
+    "test:admin": "cd apps/admin && npm test -- --coverage --watchAll=false",
+    "test:backend": "cd apps/backend && npm test -- --coverage --watchAll=false",
     "test:coverage": "turbo run test:coverage",
     "type-check": "turbo run type-check",
     "clean": "turbo run clean",
